--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bson": "^4.0.4",
     "bson-objectid": "^1.3.1",
     "concurrently": "^5.2.0",
+    "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
