--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bson": "^4.0.4",
     "bson-objectid": "^1.3.1",
     "concurrently": "^5.2.0",
-    "emoji-picker-react": "^3.2.1",
+    "emoji-mart": "^3.0.0",
     "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
